fix: icon in site navigation on safari

--- a/src/assets/styles/components/_components.sitenav.css
+++ b/src/assets/styles/components/_components.sitenav.css
@@ -108,6 +108,7 @@
 
   & > svg {
     display: inline-block;
+    max-width: none;
     overflow: visible;
   }
 
